--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
+@import "utils/vars";
+@import "utils/mixins";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/normalize";
+@import "blocks/header";
+@import "blocks/logo.scss";
+@import "blocks/icon.scss";
+@import "blocks/menu.scss";
+@import "blocks/main_page";
+@import "blocks/about.scss";
+@import "blocks/gallery.scss";
+@import "blocks/testimonials.scss";
+@import "blocks/contacts.scss";
+@import "blocks/form.scss";
+@import "blocks/footer.scss";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
