--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -58,6 +58,10 @@
       flex-direction: column;
       align-items: center;
     }
+
+    @include onDesktop {
+      align-items: flex-start;
+    }
   }
 
   &__item {
@@ -96,6 +100,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+
+    @include onDesktop {
+      align-items: flex-start;
     }
 
     &::before {
